# blade-ink-rs

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  PLAN.md  README.md  TODO.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml  release.yml
cli-player/: Cargo.toml  README.md
cli-player/src/: main.rs
cli-player/tests/: basic_tests.rs  test_the_intercept.rs
cli-player/tests/data/: TheIntercept.ink.json
clib/: Cargo.toml  Makefile  binkc.h.in  binkc.pc.in
clib/src/: cchoices.rs  cstory.rs  ctags.rs  lib.rs
clib/tests/: binkc_tags_test.c  binkc_test.c
compiler/: Cargo.toml
compiler/examples/: debug_compile.rs
compiler/src/: ast.rs  compiler.rs  consts.rs  emitter.rs  error.rs  file_handler.rs  includes.rs  inline.rs  legacy.rs  lib.rs  parsed_hierarchy.rs  parser.rs  runtime_export.rs  stats.rs  validator.rs  wave1.rs
compiler/src/bootstrap/: ast.rs  emitter.rs  legacy_root.rs  mod.rs  stats.rs  validator.rs
compiler/src/bootstrap/parser/: choice.rs  conditional.rs  expression.rs  inline.rs  mod.rs  sequence.rs
compiler/src/emitter/: choice.rs  choice_threaded.rs  choice_wrapped.rs  conditional.rs  context.rs  expression.rs  flow.rs  mod.rs  nodes.rs  path.rs
compiler/src/ink_parser/: author_warning.rs  basics.rs  choices.rs  command_line.rs  conditional.rs  content.rs  declarations.rs  divert.rs  expressions.rs  flow.rs  gather.rs  include.rs  logic.rs  mod.rs  sequences.rs  shared.rs  statements.rs  tags.rs  text.rs  whitespace.rs
compiler/src/parsed_hierarchy/: advanced_flow.rs  choice_node.rs  conditional_node.rs  content_list.rs  debug_metadata.rs  divert.rs  divert_target.rs  expressions.rs  flow.rs  flow_decl.rs  from_bootstrap.rs  function_call.rs  gather_node.rs  generation.rs  included_file.rs  list.rs  mod.rs  object.rs  parsed_node.rs  path.rs  resolution.rs  return_node.rs  sequence_node.rs  story.rs  text.rs  tunnel_onwards.rs  validation_scope.rs  variable_assignment.rs  variable_reference.rs  weave.rs
compiler/src/parser/: choice.rs  conditional.rs  declarations.rs  expression.rs  header.rs  inline.rs  lines.rs  mod.rs  sequence.rs  statement.rs  story.rs  types.rs
compiler/src/plugins/: mod.rs
compiler/src/ported/: mod.rs  runtime_export.rs
compiler/src/ported/frontend/: comment_eliminator.rs  ink_parser.rs  mod.rs  string_parser.rs  string_parser_state.rs
compiler/src/ported/parsed_hierarchy/: base.rs  choice.rs  content_list.rs  flow_base.rs  identifier.rs  mod.rs  path.rs  story.rs  text.rs
compiler/src/string_parser/: character_range.rs  character_set.rs  comment_eliminator.rs  mod.rs  state.rs
compiler/src/validator/: context.rs  diverts.rs  mod.rs  structure.rs  symbols.rs  variables.rs
compiler/tests/: compiler_tests.rs
conformance-tests/: Cargo.toml
conformance-tests/inkfiles/: test1.ink  test1.ink.json
conformance-tests/tests/: basic_text_test.rs  choice_test.rs  conditional_test.rs  divert_test.rs  function_test.rs  gather_test.rs  glue_test.rs  json_shape_test.rs  knot_test.rs  list_test.rs  memory_leak_test.rs  misc_test.rs  multi_flow_test.rs  runtime_test.rs  stitch_test.rs  tag_test.rs  the_intercept_test.rs  thread_test.rs  tunnel_test.rs  (+2 more)
inkfiles/: TheIntercept.ink.json
lib/: Cargo.toml
lib/src/: callstack.rs  choice.rs  choice_point.rs  container.rs  control_command.rs  divert.rs  error.rs  flow.rs  glue.rs  ink_list.rs  ink_list_item.rs  json_read.rs  json_write.rs  lib.rs  list_definition.rs  list_definitions_origin.rs  native_function_call.rs  object.rs  path.rs  pointer.rs  push_pop.rs  search_result.rs  state_patch.rs  story.rs  story_callbacks.rs  story_error.rs  story_state.rs  tag.rs  threadsafe.rs  value.rs  value_type.rs  variable_assigment.rs  variable_reference.rs  variables_state.rs  void.rs
lib/src/json/: json_read.rs  json_read_stream.rs  json_tokenizer.rs  json_write.rs  mod.rs
lib/src/story/: choices.rs  control_logic.rs  errors.rs  external_functions.rs  flow.rs  mod.rs  navigation.rs  progress.rs  state.rs  tags.rs  variable_observer.rs
lib/tests/: basic_text_test.rs  choice_test.rs  conditional_test.rs  divert_test.rs  function_test.rs  gather_test.rs  glue_test.rs  knot_test.rs  list_test.rs  misc_test.rs  multi_flow_test.rs  runtime_test.rs  stitch_test.rs  tag_test.rs  thread_test.rs  tunnel_test.rs  variable_test.rs  variable_text_test.rs
lib/tests/common/: mod.rs
lib/tests/data/misc/: operations.ink
rinklecate/: Cargo.toml
rinklecate/src/: compiler_tool.rs  main.rs  player.rs
rinklecate/tests/: basic_tests.rs  test_the_intercept.rs
runtime/: Cargo.toml
runtime/src/: callstack.rs  choice.rs  choice_point.rs  compiler_support.rs  container.rs  control_command.rs  divert.rs  flow.rs  glue.rs  ink_list.rs  lib.rs  list_definition.rs  list_definitions_origin.rs  native_function_call.rs  object.rs  path.rs  pointer.rs  push_pop.rs  search_result.rs  state_patch.rs  story_state.rs  value.rs  variable_reference.rs  variables_state.rs  void.rs
runtime/src/json/: json_read.rs  json_read_stream.rs  json_tokenizer.rs  json_write.rs
runtime/src/story/: choices.rs  control_logic.rs  errors.rs  external_functions.rs  flow.rs  mod.rs  navigation.rs  progress.rs  tags.rs  variable_observer.rs
src/: callstack.rs  choice.rs  choice_point.rs  container.rs  control_command.rs  divert.rs  flow.rs  glue.rs  ink_list.rs  ink_value.rs  json_read.rs  json_serialization.rs  json_write.rs  json_write_state.rs  lib.rs  native_function_call.rs  object.rs  object_enum.rs  path.rs  pointer.rs  push_pop.rs  rt_object.rs  search_result.rs  state_patch.rs  story.rs  story_error.rs  story_state.rs  tag.rs  value.rs  value_type.rs  variable_assigment.rs  variable_reference.rs  variables_state.rs  void.rs
tests/: basic_text_test.rs  choice_test.rs  conditional_test.rs  divert_test.rs  function_test.rs  gather_test.rs  glue_test.rs  knot_test.rs  list_test.rs  misc_test.rs  multi_flow_test.rs  runtime_test.rs  stitch_test.rs  tag_test.rs  test_utils.rs  thread_test.rs  tunnel_test.rs  variable_test.rs  variable_text_test.rs
(+133 files in other folders)
