[package]
name = "blade-ink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bladeink"
path = "src/lib.rs"

[[bin]]
name = "console-player"
path = "src/bin/console-player.rs"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
log = "0.4.17"
strum_macros = "0.25.2"
strum = { version = "0.25.0", features = ["derive"] }
as-any = "0.3.0"
rand = "0.8.5"

