[workspace]
members = ["compiler", "conformance-tests", "runtime", "rinklecate"]
resolver = "2"

[workspace.package]
version = "1.2.5"
authors = ["Rafael Garcia <bladecoder@gmail.com>"]
repository = "https://github.com/bladecoder/blade-ink-rs/"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
serde_json = "1.0"
rand = "0.10"
bladeink = { path = "runtime", version = "1.2.5" }
bladeink-compiler = { path = "compiler", version = "1.2.5" }
