[package]
name = "binkplayer"
version = "0.1.0"
description = """
Console player for compiled .json Ink story files.
"""
authors = ["Rafael Garcia <bladecoder@gmail.com>"]
edition = "2021"

[[bin]]
name = "binkplayer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
bink = { "version" = "0.1.0", path = "../lib" }
clap = { "version" = "4.4.6", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
