[package]
name = "binkplayer"
version = "0.9.0"
description = """
Console player for compiled .json Ink story files.
"""
authors = ["Rafael Garcia <bladecoder@gmail.com>"]
license = "Apache-2.0"
readme = "../README.md"
edition = "2021"

[[bin]]
name = "binkplayer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
bladeink = { "version" = "0.9.0", path = "../lib" }
clap = { "version" = "4.4.6", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
