[package]
name = "binkplayer"
version = "1.0.0"
description = """
Console player for compiled .json Ink story files.
"""
authors = ["Rafael Garcia <bladecoder@gmail.com>"]
repository = "https://github.com/bladecoder/blade-ink-rs/"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[[bin]]
name = "binkplayer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
bladeink = { path = "../lib", "version" = "1.0.0" }
clap = { "version" = "4.4.6", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
