[package]
name = "binkc"
version = "0.1.0"
description = """
C bindings for the `bladeink` library.
"""
license = "Apache-2.0"
authors = ["Rafael Garcia <bladecoder@gmail.com>"]
edition = "2021"

[lib]
name = "binkc"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bladeink = { "version" = "0.9.0", path = "../lib" }
