[package]
name = "bladeink-compiler"
version.workspace = true
authors.workspace = true
description = "Ink compiler for the bladeink runtime — compiles .ink source files into ink JSON stories."
license.workspace = true
repository.workspace = true
keywords = ["ink", "gamedev", "narrative", "compiler"]
categories = ["game-development"]
readme = "../README.md"
edition.workspace = true

[lib]
name = "bladeink_compiler"
path = "src/lib.rs"

[dependencies]
bladeink.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
ryu = "1"
