[package]
name = "bladeink"
version = "1.0.3"
authors = ["Rafael Garcia <bladecoder@gmail.com>"]
description = """
This is a Rust port of inkle's ink, a scripting language for writing interactive narrative.
"""
license = "Apache-2.0"
repository = "https://github.com/bladecoder/blade-ink-rs/"
keywords = ["ink", "gamedev", "narrative"]
categories = ["game-development"]
readme = "../README.md"
edition = "2021"

[lib]
name = "bladeink"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
strum = { version = "0.26.3", features = ["derive"] }
as-any = "0.3.0"
rand = "0.8.5"
instant = "0.1.12"

[features]
stdweb = ["instant/stdweb"]
wasm-bindgen = ["instant/wasm-bindgen"]
