[package]
name = "rinklecate"
version = "0.1.0"
description = "Rust implementation of inklecate — compile and play Ink stories from the command line."
authors = ["Rafael Garcia <bladecoder@gmail.com>"]
repository = "https://github.com/bladecoder/blade-ink-rs/"
license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "rinklecate"
path = "src/main.rs"

[dependencies]
bladeink = { path = "../runtime", version = "1.1.0" }
bladeink-compiler = { path = "../compiler" }
anyhow = "1.0"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
