[package]
name = "rinklecate"
version.workspace = true
authors.workspace = true
description = "Rust implementation of inklecate — compile and play Ink stories from the command line."
license.workspace = true
repository.workspace = true
keywords = ["ink", "gamedev", "narrative", "cli"]
categories = ["game-development", "command-line-utilities"]
edition.workspace = true

[[bin]]
name = "rinklecate"
path = "src/main.rs"

[dependencies]
bladeink.workspace = true
bladeink-compiler.workspace = true
anyhow = "1.0"
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
