[package]
name = "bladeink"
version.workspace = true
authors.workspace = true
description = """
This is a Rust port of inkle's ink, a scripting language for writing interactive narrative.
"""
license.workspace = true
repository.workspace = true
keywords = ["ink", "gamedev", "narrative"]
categories = ["game-development"]
readme = "../README.md"
edition.workspace = true

[lib]
name = "bladeink"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json.workspace = true
strum = { version = "0.27.2", features = ["derive"] }
as-any = "0.3.0"
rand.workspace = true
web-time = "1.1.0"

[features]
stream-json-parser = []

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
